# fastapi-vue

./: Makefile  README.md  docker-compose.yml
services/backend/: Dockerfile  pyproject.toml
services/frontend/src/: main.js
