[tool.poetry]
name = "fastapi-vue-backend"
version = "0.1.0"
description = "A FastAPI backend"
authors = ["Manuel Zander <manuel.zander@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.9.0"
Werkzeug = "^2.0.1"
coloredlogs = "^15.0.1"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
aerich = "^0.5.5"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
pytest = "^6.2.4"
flake8 = "^3.9.2"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Default line length
line-length = 88
target-version = ["py37"]

[tool.isort]
line_length = 88
indent = 4
multi_line_output = 3
default_section = "THIRDPARTY"
use_parentheses = true
combine_star = true
balanced_wrapping = false
known_tests = ["tests"]
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]
include_trailing_comma = true

[tool.coverage.run]
branch = true
source = [
    "src",
    "tests"
]

[tool.coverage.report]
include = [
    "src/*",
    "tests/*"
]